# Lithic-CLI

./: .env.example  .gitignore  .gitmodules  .graphifyignore  AUDIT_FIXES_APPLIED.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Final-Audit-Reoport.md  LICENSE  Makefile  PLATFORM_GUIDELINES.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VERIFICATION_CHECKLIST_RESULTS.md  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
benchmarks/: README.md  bench_compression.py
docs/: api.md  architecture.md  model-comparison.md  setup.md
examples/: README.md
examples/basic-usage/: README.md  main.py
k8s/: deployment.yaml
skills/lithic/: SKILL.md
src/lithic/: cli.py  config.py  orchestrator.py
src/lithic/compression/: headroom_adapter.py
src/lithic/graph/: graphify_adapter.py  service.py
src/lithic/mcp/: server.py
src/lithic/policy/: response_policy.py
src/lithic/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  service.py
src/lithic/tools/: audit.py  fs.py  shell.py
src/lithic/updater/: branch_manager.py  change_analyzer.py  risk_scanner.py  upstream_checker.py
src/lithic_cli/: health.py  monitoring.py  orchestrator.py  resilience.py  secrets.py  tracing.py
src/lithic_cli/graph/: backends.py
src/lithic_cli/providers/: anthropic_provider.py  openai_provider.py
tests/: test_config.py
tests/cli/: test_cli.py
tests/graph/: test_graphify_adapter.py
tests/integration/: test_e2e_workflow.py  test_orchestrator.py
tests/mcp/: test_server.py
tests/providers/: test_provider_service.py  test_service.py
tests/tools/: test_audit.py  test_fs.py  test_shell.py
