[project]
name = "lithic-cli"
version = "0.2.0"
description = "Adapter-first unified coding agent combining graph indexing, compression, and concise response policy."
readme = "README.md"
authors = [
    { name = "Lithic CLI Contributors" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "graphifyy>=0.8.47",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
headroom = ["headroom-ai[proxy,code,mcp,relevance]>=0.27.0"]
llm = ["anthropic>=0.49.0", "openai>=2.44.0"]
mcp = ["mcp>=1.28.0,<2"]

[project.urls]
Homepage = "https://github.com/DelwarOfficial/Lithic-CLI"
Repository = "https://github.com/DelwarOfficial/Lithic-CLI"
Issues = "https://github.com/DelwarOfficial/Lithic-CLI/issues"

[project.scripts]
lithic = "lithic.cli:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.3.0",
    "ruff>=0.15.19",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["headroom.*", "yaml"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/lithic"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
