[project]
name = "lithic-cli"
version = "0.2.0"
description = "Adapter-first unified coding agent combining graph indexing, compression, and concise response policy."
readme = "README.md"
authors = [
    { name = "Lithic CLI Contributors" }
]
requires-python = ">=3.12"
dependencies = [
    "click==8.1.7",
    "graphifyy==0.8.49",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "pyyaml==6.0.2",
    "rich==13.9.4",
]

[project.optional-dependencies]
headroom = ["headroom-ai[proxy,code,mcp,relevance]==0.27.0"]
llm = ["anthropic==0.112.0", "openai==2.44.0"]
mcp = ["mcp==1.28.1"]
tracing = ["opentelemetry-api==1.28.2", "opentelemetry-sdk==1.28.2", "opentelemetry-exporter-jaeger==1.28.2"]

[project.urls]
Homepage = "https://github.com/DelwarOfficial/Lithic-CLI"
Repository = "https://github.com/DelwarOfficial/Lithic-CLI"
Issues = "https://github.com/DelwarOfficial/Lithic-CLI/issues"

[project.scripts]
lithic = "lithic_cli.cli:main"

[dependency-groups]
dev = [
    "mypy==2.1.1",
    "pytest==8.3.4",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["headroom.*", "yaml", "openai", "anthropic", "mcp", "mcp.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/lithic_cli"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
