[project]
name = "lithic-cli"
version = "0.2.0"
description = "Adapter-first unified coding agent combining graph indexing, compression, and concise response policy."
readme = "README.md"
authors = [
    { name = "Lithic CLI Contributors" }
]
requires-python = ">=3.12"
dependencies = [
    "click==8.1.7",
    "graphifyy==0.8.49",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "pydantic>=2.10.3",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "psutil==6.1.0",
]

[project.optional-dependencies]
headroom = ["headroom-ai[proxy,code,mcp,relevance]==0.27.0"]
llm = ["anthropic==0.112.0", "openai==2.44.0"]
mcp = ["mcp==1.28.1"]
tracing = ["opentelemetry-api>=1.26.0", "opentelemetry-sdk>=1.26.0"]
redis = ["redis>=5.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]
web = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
streaming = ["watchfiles>=1.0.0"]
enterprise = [
    "redis>=5.0.0", 
    "psycopg2-binary>=2.9.0", 
    "fastapi>=0.115.0", 
    "uvicorn>=0.30.0", 
    "watchfiles>=1.0.0",
    "prometheus-client>=0.20.0"
]

[project.urls]
Homepage = "https://github.com/DelwarOfficial/Lithic-CLI"
Repository = "https://github.com/DelwarOfficial/Lithic-CLI"
Issues = "https://github.com/DelwarOfficial/Lithic-CLI/issues"

[project.scripts]
lithic = "lithic_cli.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pdoc>=14.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["headroom.*", "yaml", "openai", "anthropic", "mcp", "mcp.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/lithic_cli"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/lithic_cli"]
omit = ["tests/*", "benchmarks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
